--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: ^6.1.0
   intl: ^0.19.0
+  provider: ^6.1.1
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
