--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.1.1
   http: ^1.2.0
+  location_picker_flutter_map: ^3.0.0
+  google_maps_flutter: ^2.5.3
+  geolocator: ^10.1.1
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
