--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   geolocator: ^10.1.1
   uuid: ^4.3.3
+  upi_india: ^3.0.1
 
 dev_dependencies:
   flutter_test:
